# dj-ec-idcardfield

./: .python-version  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  docker-compose.yml  index.html  pyproject.toml
.devcontainer/: devcontainer.json
dj_ec_idcardfield/: __init__.py  serializers.py
docs/: mkdocs.yml
docs/docs/: index.md
search/: search_index.json
tests/: forms_tests.py  import_tests.py  serializers_tests.py  settings.py  validators_tests.py
tests/sample_app/: forms.py  models.py  serializers.py  settings.py  values.py
